# 2D-Game-Engine

./: .gitignore  CMakeLists.txt  README.md
include/engine/: Collision.h  Components.h  ECS.h  Engine.h  Input.h  Math.h  ParticleSystem.h  Renderer.h  Scene.h  TileMap.h
src/demo/: DemoGame.cpp
src/engine/: Collision.cpp  Engine.cpp  ParticleSystem.cpp  Renderer.cpp  Scene.cpp  TileMap.cpp
tests/: test_collision.cpp  test_ecs.cpp  test_math.cpp  test_particles.cpp  test_scene.cpp  test_tilemap.cpp
